# Parallel_CPU-GPU_Framework_for_Cost-Bounded_DFS

./: .gitignore  CMakeLists.txt  DeepCubeA-MIT.txt  README.md  THIRD_PARTY_NOTICES.md  action_concepts.h  generate_work.h  i_env.h  main.cpp  pdb15.cpp  pdb15.h  puzzle15_state.cpp  puzzle15_state.h  puzzle_actions.h  puzzle_env.cpp  puzzle_env.h  tests.cpp  work.h
.github/: CODEOWNERS
.github/workflows/: cmake-multi-platform.yml
include/: action_concepts.h  app.h  batch_ida.h  cb-dfs.h  deepcubea15_heuristic.h  do_iteration.h  generate_work.h  heuristic_router.h  i_env.h  korf_examples.h  manhattan_15.h  neural_batch_service.h  neural_delta_15.h  neural_delta_15_quantile.h  nn_over_corrections.h  nvtx_helpers.h  pdb15.h  puzzle15_state.h  puzzle_actions.h  puzzle_env.h  solution_printer.h  subtree_expansion.h  test_cb-dfs.h  test_do_iteration.h  test_generate_work.h  test_ida_star_korf_examples.h  work.h  work_scheduler.h
python/models/: nn_pdb_1_7_delta_full.pt  nn_pdb_8_15_delta_lcg.pt  nn_pdb_8_15_delta_lcg_ens0.pt  nn_pdb_8_15_delta_lcg_ens1.pt  nn_pdb_8_15_delta_lcg_ens2.pt  nn_pdb_8_15_delta_lcg_ens3.pt
python/python/: certify_pdb_1_7.py  certify_pdb_8_15_ensemble.py  corr_by_dpred.py  eval_full_8_15_q0357_collect_errors.py  eval_pdb_1_7.py  eval_pdb_8_15_ensemble.py  export_ts_from_state_dict.py  pdb15_native.py  pdb_dataset.py  pdb_models.py  pdb_radix.py  train_pdb_1_7.py  train_pdb_8_15_lcg.py
src/: app.cpp  build_nn_over_corrections.cpp  deepcubea15_heuristic.cpp  do_iteration.cpp  heuristic_router.cpp  korf_examples.cpp  main.cpp  manhattan_15.cpp  neural_batch_service.cpp  neural_delta_15.cpp  neural_delta_15_quantile.cpp  nn_over_corrections.cpp  pdb15.cpp  puzzle15_state.cpp  puzzle_env.cpp  solution_printer.cpp  subtree_expansion.cpp
tests/: test_cb-dfs.cpp  test_do_iteration.cpp  test_generate_work.cpp  test_ida_star_korf_boards.cpp  test_main.cpp  tests.cpp
